Switch Create, Update, and Delete to templates

--- a/vagrant/menus/templates/menu.html
+++ b/vagrant/menus/templates/menu.html
@@ -25,7 +25,7 @@
 
 {% endfor %}
 
-<a href='{{url_for("newMenuItem", restaurant_id=i.restaurant_id)}}'>Add a New Item </a>
+<a href='{{url_for("newMenuItem", restaurant_id=restaurant.id)}}'>Add a New Item </a>
 
 </body>
 
