Add CSS Style sheet for menu.html

--- a/vagrant/menus/templates/menu.html
+++ b/vagrant/menus/templates/menu.html
@@ -1,10 +1,15 @@
-
+<!DOCTYPE html>
 <html>
-
+<head>
+  <title>{{restaurant.name}}</title>
+  <link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
+</head>
 <body>
-
-  <h1>{{restaurant.name}}</h1>
-
+  <div class='pane'>
+    <div class='header'>
+      <h1>{{restaurant.name}}</h1>
+    </div>
+  <div class='flash'>
   {% with messages = get_flashed_messages() %}
     {% if messages %}
       <ul>
@@ -14,21 +19,27 @@
       </ul>
     {% endif %}
   {% endwith %}
-
+  </div>
   {% for i in items %}
-  <div>
-    <p>{{i.name}}
-       (<a href='{{url_for("editMenuItem", restaurant_id=i.restaurant_id, menu_id=i.id)}}'>edit</a>
-        / <a href='{{url_for("deleteMenuItem", restaurant_id=i.restaurant_id, menu_id=i.id)}}'>delete</a>)
-    </p>
+  <div class='nameAndPrice'>
+    <span class='name'> {{i.name}} </span>
+    <span class='price'> {{i.price}} </span>
     <p>{{i.description}}</p>
-    <p> {{i.price}} </p>
+    <div class='editdeletepane'>
+      <p>
+        (<a href='{{url_for("editMenuItem", restaurant_id=i.restaurant_id, menu_id=i.id)}}'>
+          edit
+        </a>
+         / <a href='{{url_for("deleteMenuItem", restaurant_id=i.restaurant_id, menu_id=i.id)}}'>delete
+        </a>)
+      </p>
+    </div>
+
     <br>
   </div>
   {% endfor %}
-
   <a href='{{url_for("newMenuItem", restaurant_id=restaurant.id)}}'>Add a New Item </a>
-
+</div>
 </body>
 
 </html>
