--- a/vagrant/menus/templates/editMenuItem.html
+++ b/vagrant/menus/templates/editMenuItem.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <h3>Please Leave Any Fields You Don't Wish to Change Blank.</h3>
-  <form method='POST' enctype='multipart/form-data' action='{{url_for("editMenuItem",restaurant_id=item.restaurant_id, menu_id=item.id)}}'>
+  <form method='POST' enctype='multipart/form-data' action='#'>
     What is the New Name for the Item?</br>
     <input name='iname' type='text' value='{{item.name}}'></br></br>
     "What is the New Price for the Item?</br>
