--- a/vagrant/menus/templates/deleteMenuItem.html
+++ b/vagrant/menus/templates/deleteMenuItem.html
@@ -4,17 +4,18 @@
     <title>Delete Menu Item</title>
   </head>
   <body>
-    <p>Are you sure you wish to delete {{item.name}} from the menu?</p>
-    <br>
-    <br>
-    <form method ='POST' enctype'multipart/form-data' action='{{url_for("deleteMenuItem", restaurant_id=item.restaurant_id, menu_id=item.id)}}'>
+    <div class='heading'>
+      <h2>Delete Menu Item</h2>
+    </div>
+    <form method ='POST' action='#'>
+      <p>Are you sure you wish to delete {{item.name}} from the menu?</p>
       <input type='submit' name='Delete' value='Delete'>
     </form>
     <br>
     <p>
-      Or return to
-      <a href='/restaurants/{{item.restaurant_id}}'>
-      Restaurant Home
+      Or Return to
+      <a href='#'>
+      Restaurant Menu
       </a>
     </p>
   </body>
