--- a/vagrant/menus/templates/menu.html
+++ b/vagrant/menus/templates/menu.html
@@ -27,10 +27,10 @@
     <p>{{i.description}}</p>
     <div class='editdeletepane'>
       <p>
-        (<a href='{{url_for("editMenuItem", restaurant_id=i.restaurant_id, menu_id=i.id)}}'>
+        (<a href='#'>
           edit
         </a>
-         / <a href='{{url_for("deleteMenuItem", restaurant_id=i.restaurant_id, menu_id=i.id)}}'>delete
+         / <a href='#'>delete
         </a>)
       </p>
     </div>
@@ -38,7 +38,9 @@
     <br>
   </div>
   {% endfor %}
-  <a href='{{url_for("newMenuItem", restaurant_id=restaurant.id)}}'>Add a New Item </a>
+  <div class="newItem">
+    <a href='#'> Add a New Item </a>
+  </div>
 </div>
 </body>
 
