--- a/vagrant/menus/templates/newMenuItem.html
+++ b/vagrant/menus/templates/newMenuItem.html
@@ -1,18 +1,22 @@
+<!DOCTYPE html>
 <html>
-
+<head>
+  <title>New Menu Item</title>
+</head>
 <body>
-
-  <form method='POST' enctype='multipart/form-data' action='{{url_for("newMenuItem",restaurant_id=restaurant_id)}}''>
-    What is the Name of the New Item?</br>
-    <input name='iname' type='text'></br></br>
-    What is the Price of the New Item?</br>
-    <input name='iprice' type='text'></br></br>
-    Please provide a Brief Description of the Item</br>
-    <input name='descript' type='text' size=40></br>
-    </br><input type='submit' value='Submit'> </form>
-
-
-
+  <div class="heading">
+    <h2>Add New Menu Item</h2>
+  </div>
+  <div class="itemForm">
+    <form method='POST' enctype='multipart/form-data' action='#'>
+      What is the Name of the New Item?</br>
+      <input name='iname' type='text'></br></br>
+      What is the Price of the New Item?</br>
+      <input name='iprice' type='text'></br></br>
+      Please provide a Brief Description of the Item</br>
+      <input name='descript' type='text' size=40></br>
+      </br><input type='submit' value='Submit'>
+    </form>
+  </div>
 </body>
-
 </html>
