--- a/vagrant/menus/templates/editRestaurant.html
+++ b/vagrant/menus/templates/editRestaurant.html
@@ -7,7 +7,7 @@
   <div class="heading">
     <h2>Edit Restaurant</h2>
   </div>
-  <form method='POST' enctype='multipart/form-data' action='#'>
+  <form method='POST' enctype='multipart/form-data' action="{{ url_for('editRestaurant', restaurant_id=restaurant.id) }}">
     What is the New Name for the Restaurant?</br>
     <input name='iname' type='text' value='{{restaurant.name}}'></br>
     </br><input type='submit' value='Submit'>
