Add CRUD functionality to finalproject.py

--- a/vagrant/menus/templates/newRestaurant.html
+++ b/vagrant/menus/templates/newRestaurant.html
@@ -11,7 +11,7 @@
     <form method='POST' enctype='multipart/form-data' action="{{ url_for('addRestaurant') }}">
       What is the Name of the New Restaurant?
       <br>
-      <input name='iname' type='text'>
+      <input name='rname' type='text'>
       <br><br>
       <input type='submit' value='Submit'>
     </form>
