--- a/vagrant/menus/templates/editRestaurant.html
+++ b/vagrant/menus/templates/editRestaurant.html
@@ -9,7 +9,7 @@
   </div>
   <form method='POST' enctype='multipart/form-data' action="{{ url_for('editRestaurant', restaurant_id=restaurant.id) }}">
     What is the New Name for the Restaurant?</br>
-    <input name='iname' type='text' value='{{restaurant.name}}'></br>
+    <input name='rname' type='text' value='{{restaurant.name}}'></br>
     </br><input type='submit' value='Submit'>
   </form>
 
