Add JSON capability & flash messages

--- a/vagrant/menus/templates/restaurants.html
+++ b/vagrant/menus/templates/restaurants.html
@@ -7,6 +7,19 @@
   <div class='heading'>
     <h1>Restaurants</h1>
   </div>
+  <div class='flash'>
+  {% with messages = get_flashed_messages() %}
+    {% if messages %}
+      <ul>
+        {% for message in messages %}
+          <li><strong>
+            {{message}}
+          </strong></li>
+        {% endfor %}
+      </ul>
+    {% endif %}
+  {% endwith %}
+  </div>
   <div class='restaurants'>
     {% for r in restaurants %}
       <a href="{{ url_for('restaurantMenu', restaurant_id=r.id) }}">{{r.name}}</a>
