--- a/vagrant/menus/templates/editMenuItem.html
+++ b/vagrant/menus/templates/editMenuItem.html
@@ -10,6 +10,8 @@
     <input name='iname' type='text' value='{{item.name}}'></br></br>
     "What is the New Price for the Item?</br>
     <input name='iprice' type='text' value='{{item.price}}'></br></br>
+    What is the new Course of the New Item?</br>
+    <input name='icourse' type='text' value='{{item.course}}'></br></br>
     Please provide a Brief Description of the Item</br>
     <input name='descript' type='text' size=40 value="{{item.description}}"></br>
     </br><input type='submit' value='Submit'>
