--- a/vagrant/menus/templates/newMenuItem.html
+++ b/vagrant/menus/templates/newMenuItem.html
@@ -13,6 +13,8 @@
       <input name='iname' type='text'></br></br>
       What is the Price of the New Item?</br>
       <input name='iprice' type='text'></br></br>
+      What is the Course of the New Item?</br>
+      <input name='icourse' type='text'></br></br>
       Please provide a Brief Description of the Item</br>
       <input name='descript' type='text' size=40></br>
       </br><input type='submit' value='Submit'>
