--- a/vagrant/catalog/templates/addGenre.html
+++ b/vagrant/catalog/templates/addGenre.html
@@ -1,17 +1,14 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Add a New Genre</title>
-</head>
-<body>
+{% extends "main.html" %}
+{% block content %}
   <h2>Add a New Genre to the Library</h2>
   <div class="genreForm">
-    <form method="POST" enctype="multipart/form-data" action="{{ url_for('addGenre') }}">
+    <form method="POST" enctype="multipart/form-data" action="{{ url_for('addGenre') }}" id="genreForm">
       <p>
         Name: <input name="name" type='text'><br>
-        Description:<input name='description' maxlength="128"><br>
+        Description:<br>
+        <textarea name='description' form='genreForm' maxlength="256"></textarea><br>
         <input type="submit" value="Submit">
       </p>
     </form>
   </div>
-</body>
+{% endblock %}
