--- a/vagrant/catalog/templates/editBook.html
+++ b/vagrant/catalog/templates/editBook.html
@@ -1,12 +1,8 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Edit Book</title>
-</head>
-<body>
+{% extends "main.html" %}
+{% block content %}
   <h2>Make Changes to {{book.title}}</h2>
   <div class="bookForm">
-    <form method="POST" enctype="multipart/form-data" action="{{ url_for('editBook', book_id=book.id) }}">
+    <form method="POST" enctype="multipart/form-data" action="{{ url_for('editBook', book_id=book.id) }}" id="bookForm">
       <p>
         Title: <input name="title" type='text' value="{{book.title}}"><br>
         Author: <input name='author' type='text' value="{{book.author}}"><br>
@@ -15,10 +11,11 @@
             <option value='{{g.name}}'>{{g.name}}</option>
           {% endfor %}
         </select><br>
-        Description:<input name='description' maxlength="128" value="{{book.description}}"><br>
+        Description:<br>
+        <textarea name='description' form='bookForm' maxlength="256"></textarea><br>
         <input type="submit" value="Submit">
       </p>
     </form>
     <a href="{{url_for('index')}}">Return Home</a>
   </div>
-</body>
+{% endblock %}
