--- a/vagrant/catalog/templates/genre.html
+++ b/vagrant/catalog/templates/genre.html
@@ -1,15 +1,14 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>{{genre.name}}</title>
-</head>
-<body>
-  <h1>{{genre.name}}</h1>
-  <p>{{genre.description}}</p>
+{% extends "main.html" %}
+{% block content %}
+  <h2>{{genre.name}}</h2>
+  <p><strong>Description:</strong> {{genre.description}}</p>
+  <h3>Books:</h3>
   <ul>
     {% for b in books%}
-      <li>{{b.title}}</li>
+      <li><a href="{{url_for('showBook', book_id=b.id)}}">{{b.title}}</a></li>
     {% endfor %}
   </ul>
-</body>
-</html>
+  {% if session.user_id == genre.user_id %}
+    <p><a href="{{url_for('removeGenre', genre_id=genre.id)}}">Delete Genre</a></p>
+  {% endif %}
+{% endblock %}
