--- a/vagrant/catalog/templates/login.html
+++ b/vagrant/catalog/templates/login.html
@@ -1,34 +1,29 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Login</title>
+{% extends "main.html" %}
+  {% block title %}Login{% endblock %}
+  {% block head %}
   <!--LOAD PRE-REQUISITES FOR GOOGLE SIGN IN -->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js">
   </script>
-
   <script src="//apis.google.com/js/platform.js?onload=start"> </script>
 
   <!-- END PRE-REQUISITES FOR GOOGLE SIGN IN -->
-</head>
-<body>
-
-
+{% endblock %}
+{% block content %}
+<h3>Login Using Your Google Account:</h3>
+<br>
 <!-- GOOGLE PLUS SIGN IN-->
-
-
-          <div id="signinButton">
-            <span class="g-signin"
-              data-scope="openid email"
-              data-clientid="633496753089-vcobe49mrrfsq3v19crc6is4vp50gbn2.apps.googleusercontent.com"
-              data-redirecturi="postmessage"
-              data-accesstype="offline"
-              data-cookiepolicy="single_host_origin"
-              data-callback="signInCallback"
-              data-approvalprompt="force">
-            </span>
-          </div>
-
-<div id="result"></div>
+  <div id="signinButton">
+    <span class="g-signin"
+      data-scope="openid email"
+      data-clientid="633496753089-vcobe49mrrfsq3v19crc6is4vp50gbn2.apps.googleusercontent.com"
+      data-redirecturi="postmessage"
+      data-accesstype="offline"
+      data-cookiepolicy="single_host_origin"
+      data-callback="signInCallback"
+      data-approvalprompt="force">
+    </span>
+  </div>
+  <div id="result"></div>
 
 <script>
 function signInCallback(authResult) {
@@ -59,5 +54,4 @@ function signInCallback(authResult) {
 
 <!--END GOOGLE PLUS SIGN IN -->
 
-</body>
-</html>
+{% endblock %}
