--- a/vagrant/catalog/templates/addBook.html
+++ b/vagrant/catalog/templates/addBook.html
@@ -3,18 +3,44 @@
   <h2>Add a New Book to the Library</h2>
   <div class="bookForm">
     <form method="POST" enctype="multipart/form-data" action="{{ url_for('addBook') }}" id="bookForm">
-      <p>
-        Title: <input name="title" type='text'><br>
-        Author: <input name='author' type='text'><br>
-        Genre: <select name='genre'>
+      <div class="form-row">
+        <div class="col-label">
+          <label for="title">Title: </label>
+        </div>
+        <div class="col-form">
+          <input name="title" id="title" type='text'>
+        </div>
+      </div>
+      <div class="form-row">
+        <div class="col-label">
+          <label for="author">Author: </label>
+        </div>
+        <div class="col-form">
+          <input name='author' id="author" type='text'>
+        </div>
+      </div>
+      <div class="form-row">
+        <div class="col-label">
+          <label for="genre">Genre: </label>
+        </div>
+        <div class="col-form">
+          <select name='genre' id="genre">
           {% for g in genres %}
             <option value='{{g.name}}'>{{g.name}}</option>
           {% endfor %}
-        </select><br>
-        Description:<br>
-        <textarea name='description' form='bookForm' maxlength="256"></textarea><br>
-        <input type="submit" value="Submit">
-      </p>
+        </select>
+        </div>
+      </div>
+      <div class="form-row">
+        <div class="col-label">
+          <label for="desc">Description: </label>
+        </div>
+        <div class="col-form">
+          <textarea name='description' form='bookForm' maxlength="256"></textarea>
+        </div>
+      </div>
+      <br>
+      <input type="submit" value="Submit">
     </form>
   </div>
 {% endblock %}
