--- a/vagrant/catalog/templates/genre.html
+++ b/vagrant/catalog/templates/genre.html
@@ -3,8 +3,11 @@
   <h2>{{genre.name}}</h2>
   <p><strong>Description:</strong> {{genre.description}}</p>
   <h3>Books:</h3>
+  {% if not books %}
+    <p>No Books Added Yet</p>
+  {% endif %}
   <ul>
-    {% for b in books%}
+    {% for b in books %}
       <li><a href="{{url_for('showBook', book_id=b.id)}}">{{b.title}}</a></li>
     {% endfor %}
   </ul>
