--- a/vagrant/catalog/templates/index.html
+++ b/vagrant/catalog/templates/index.html
@@ -1,7 +1,11 @@
 {% extends "main.html" %}
+{% block title %}Home{% endblock %}
 {% block content %}
   <div class="books">
-    <h2>Books:</h2>
+    <h3>Latest Books:</h3>
+    {% if not books %}
+      <p>No Books Added Yet</p>
+    {% endif %}
     <ul>
       {% for b in books %}
         <li>
