Add README files

--- a/vagrant/catalog/templates/genre.html
+++ b/vagrant/catalog/templates/genre.html
@@ -1,4 +1,5 @@
 {% extends "main.html" %}
+{% block title %}{{genre.name}}{% endblock %}
 {% block content %}
   <h2>{{genre.name}}</h2>
   <p><strong>Description:</strong> {{genre.description}}</p>
