--- a/vagrant/catalog/templates/addBook.html
+++ b/vagrant/catalog/templates/addBook.html
@@ -1,4 +1,5 @@
 {% extends "main.html" %}
+{% block title %}New Book{% endblock %}
 {% block content %}
   <h2>Add a New Book to the Library</h2>
   <div class="bookForm">
