--- a/vagrant/catalog/templates/addGenre.html
+++ b/vagrant/catalog/templates/addGenre.html
@@ -1,4 +1,5 @@
 {% extends "main.html" %}
+{% block title %}Add Genre{% endblock %}
 {% block content %}
   <h2>Add a New Genre to the Library</h2>
   <div class="genreForm">
