--- a/vagrant/catalog/templates/book.html
+++ b/vagrant/catalog/templates/book.html
@@ -1,4 +1,5 @@
 {% extends "main.html" %}
+{% block title %}{{book.title}}{% endblock %}
 {% block content %}
   <h2>{{book.title}}</h2>
   <h3>by: {{book.author}}</h3>
