--- a/vagrant/catalog/templates/deleteBook.html
+++ b/vagrant/catalog/templates/deleteBook.html
@@ -1,4 +1,5 @@
 {% extends "main.html" %}
+{% block title %}Delete {{book.title}}{% endblock %}
 {% block content %}
   <h2>Are you sure you wish to delete {{book.title}}?</h2>
   <div class="bookForm">
