--- a/vagrant/catalog/templates/deleteGenre.html
+++ b/vagrant/catalog/templates/deleteGenre.html
@@ -1,4 +1,5 @@
 {% extends "main.html" %}
+{% block title %}Delete {{genre.name}}{% endblock %}
 {% block content %}
   <h2>Are you sure you wish to delete {{genre.name}}?</h2>
   <div class="genreForm">
