--- a/vagrant/catalog/templates/editBook.html
+++ b/vagrant/catalog/templates/editBook.html
@@ -1,4 +1,5 @@
 {% extends "main.html" %}
+{% block title %}Edit {{book.title}}{% endblock %}
 {% block content %}
   <h2>Make Changes to {{book.title}}</h2>
   <div class="bookForm">
